# tree-sitter-ipkg

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  copy-realworld.sh  flake.nix  go.mod  grammar.js  ipkg.abnf  package-lock.json  package.json  pyproject.toml  setup.py  test.ipkg  tree-sitter.json
.github/workflows/: ci.yml  fuzz.yml
bindings/c/: tree-sitter-ipkg.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ipkg/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterIpkg/: ipkg.h
bindings/swift/TreeSitterIpkgTests/: TreeSitterIpkgTests.swift
examples/: optparse-config.ipkg  optparse-test-config.ipkg  parser-main-test-config.ipkg
queries/: hightlighs.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: comments.txt  depends.txt  langversion.txt  statements.txt
test/corpus/realworld/: idris2-docs.txt  idris2-general-test.txt  idris2-json-parser.txt  idris2-json-test.txt  idris2-lsp-main.txt  idris2-lsp-tests.txt  idris2-main-parser.txt  idris2-show-parser.txt  idris2-show-test.txt  idris2-toml-parser.txt  idris2-toml-test.txt  idris2-tsv-parser.txt  idris2-tsv-test.txt  idris2-webidl-parser.txt  idris2-webidl-test.txt  optparse-main.txt  optparse-test.txt
